--- a/page/css/base.css
+++ b/page/css/base.css
@@ -9,33 +9,38 @@ body{
     background:url("http://pic1.sc.chinaz.com/files/pic/pic9/201903/zzpic17012.jpg")
 }
 .header{
+    position: fixed;
+    z-index: 999;
     width: 100%;
     height: 50px;
-    background: #fff;
+    height: 5rem;
+    background: #d9f8e9;
+    opacity: 0.9;
 }
 .container{
     position: relative;
     width: 1170px;
     height: 50px;
     margin: 0px auto;
+    overflow: hidden;
 }
 .title{
     display:inline-block;
     float: left;
-    color: #999;
-    line-height: 50px;
-    text-decoration: none;
-    margin: 0px 15px;
-    font-size: 18px;
+    /*color: #999;*/
+    /*line-height: 50px;*/
+    /*text-decoration: none;*/
+    /*margin: 0px 15px;*/
+    /*font-size: 18px;*/
 }
 .menu{
     float: left;
 }
 .menu > li {
     display: inline-block;;
-    flaot: left;
+    float: left;
     height: 50px;
-    width: 58px;
+    margin-left: 20px;
     font-size: 14px;
     line-height: 50px;
     color: #000;
@@ -79,7 +84,7 @@ body{
     border-radius: 5px;
     display: inline-block;
     position: relative;
-    width: 1170px;
+    width: 90%;
     margin: 30px auto 0px auto;
     background: #fff;
 }
@@ -210,4 +215,38 @@ body{
 .now_page {
     background: hotpink !important;
     color: #fff !important;
+}
+/* 轮播2 */
+.contents-text1{
+    position: relative;
+    width: 604px;
+    width: 40.4rem;
+    height: 418px;
+    height: 33.8rem;
+    float: left;
+}
+.contents-text1 .leaf{
+    position: absolute;
+    bottom: 0.7rem;
+    right: 0;
+    width: 116px;
+    width: 11.6rem;
+    height: 44px;
+    height: 4.4rem;
+    line-height: 44px;
+    line-height: 4.4rem;
+    background: #fff;
+}
+.contents-text1 .leaf .leaf-left{
+    margin-left: 35px;
+    float: left;
+    font-size: 19px;
+    font-size: 1.9rem;
+}
+.contents-text1 .leaf .leaf-right{
+    float: left;
+    color: #666;
+    font-size: 12px;
+    font-size: 1.2rem;
+    margin-top: 4px;
 }
