--- a/page/css/more.css
+++ b/page/css/more.css
@@ -10,6 +10,25 @@ body{
     /*opacity: 1;*/
     /*background:url("../img/cloud.png")*/
 }
+a{
+    text-decoration: none;
+    color: #fff;
+}
+.more_list{
+    position: fixed;
+    top: 250px;
+    left: 10px;
+}
+.more_list .an_list1{
+    background: rgb(244, 157, 45);
+    padding: 10px;
+    padding: 1rem;
+    -webkit-border-radius: 0.5rem;
+    -moz-border-radius: 0.5rem;
+    border-radius: 0.5rem;
+    margin-bottom: 10px;
+    margin-bottom: 1rem;
+}
 .header{
     position: fixed;
     z-index: 999;
