--- a/page/css/fpzc.css
+++ b/page/css/fpzc.css
@@ -4,7 +4,11 @@
     text-decoration: none;
 
 }
+html {
+    height: 100%;
+}
 body{
+    height: 100%;
     position: relative;
     text-align: center;
     overflow-x: hidden;
@@ -57,21 +61,46 @@ body{
     color: #f40;
     border-bottom: 1px solid #f40;
 }
-.top_img{
-    position: relative;
-    margin-top: 50px;
-    width: 100%;
-    height: 600px;
-    overflow: hidden;
+.wrapper {
+    background-image: url('../img/fpzc3.jpg');
+    background-size: 100% 100%;
+    height: 100%;
 }
-.top_img img{
-    width: 100%;
+.wrapper h2 {
+    padding-top: 60px;
+    text-align: center;
 }
-.top_contetn{
+.wrapper h4 {
+    margin-top: 15px;
+    margin-left: 300px;
+}
+.way-one,
+.way-two {
+    width: 40%;
     position: absolute;
-    bottom: 0px;
-    width: 800px;
-    height: 300px;
-    background: #fff;
-    opacity: 0.6;
+    padding: 10px;
+    background-color: #fff;
+    border-radius: 5px;
+    opacity: 0.8;
+}
+.way-one {
+    left: 2%;
+    top: 60%;
+}
+.way-two {
+    right: 2%;
+    top: 20%;
+}
+.way-one span,
+.way-two span {
+    display: block;
+    text-align: center;
+    color: greenyellow;
+    margin: 10px 0;
+}
+.way-one p,
+.way-two p {
+    line-height: 30px;
+    text-indent: 2em;
+    text-align: left;
 }
