--- a/page/css/about.css
+++ b/page/css/about.css
@@ -3,7 +3,8 @@
     width: 96%;
     border-radius: 5px;
     padding: 10px 15px 20px 15px;
-    box-shadow: 3px 4px 3px #888;
+    box-shadow: -2px 10px 18px rgba(0, 0, 0, 0.2);
+
 }
 .about_title{
     width: 95%;
