--- a/page/css/blog_detail.css
+++ b/page/css/blog_detail.css
@@ -1,9 +1,137 @@
+*{
+    margin: 0px;
+    padding: 0px;
+    text-decoration: none;
+
+}
+body{
+    overflow-x: hidden;
+    position: relative;
+    text-align: center;
+    /*background: pink;*/
+    /*background:url("http://pic1.sc.chinaz.com/files/pic/pic9/201903/zzpic17012.jpg")*/
+}
+.header{
+    position: fixed;
+    z-index: 999;
+    width: 100%;
+    height: 30px;
+    height: 3rem;
+    background: #d9f8e9;
+    opacity: 0.9;
+}
+.container{
+    position: relative;
+    width: 1170px;
+    height: 50px;
+    margin: 0px auto;
+    overflow: hidden;
+}
+.title{
+    display:inline-block;
+    float: left;
+    /*color: #999;*/
+    /*line-height: 50px;*/
+    /*text-decoration: none;*/
+    /*margin: 0px 15px;*/
+    /*font-size: 18px;*/
+}
+.menu{
+    float: left;
+}
+.menu > li {
+    display: inline-block;;
+    float: left;
+    height: 50px;
+    margin-left: 20px;
+    font-size: 14px;
+    line-height: 50px;
+    color: #000;
+}
+.menu > li > a {
+    text-decoration: none;
+    color: #000;
+}
+.menu > li > a:hover {
+    color: #f40;
+    border-bottom: 1px solid #f40;
+}
+
+.search_bar > input {
+    display: inline-block;
+    position: absolute;
+    height: 22px;
+    padding: 5px 10px;
+    border-radius: 5px;
+    outline: none; /*去掉输入框选中蓝色方框*/
+    border: 1px solid;
+    font-size: 14px;
+    top: 50%;
+    margin-top: -18px;
+    right: 60px;
+}
+.search_bar > button{
+    display: inline-block;
+    position: absolute;
+    width: 100px;
+    height: 34px;
+    padding: 5px 10px;
+    border-radius: 20px;
+    top: 50%;
+    margin-top: -18px;
+    outline: none;
+    color: #555555;
+    right: 0px;
+    background: antiquewhite;
+}
+.tc{
+    position: absolute;
+    top: 15px;
+    right: 200px;
+}
+.tc_name{
+    margin-right: 10px;
+    float: left;
+    font-size: 15px;
+}
+.tc_a{
+    font-size: 14px;}
+.content_left{
+    padding-top: 50px;
+}
+
+.footer{
+    width: 100%;
+    height: 60px;
+    background: #191818;
+    text-align: center;
+    padding: 20px;
+}
+.footer > ul{
+    display: inline-block;
+    margin: 0px auto;
+    text-align: center;
+}
+.footer > ul > li{
+    display: inline-block;
+    color: #000;
+    float: left;
+    font-size: 14px;
+    margin-left: 10px;
+    cursor: pointer;
+    text-align: center;
+}
+.footer > p{
+    margin-top: 10px;
+    color: #a2a2a2;
+}
+
 .blog {
     background: white;
     width: 96%;
     border-radius: 5px;
     padding: 10px 15px;
-    box-shadow: 3px 4px 3px #888888;
+    box-shadow: -2px 10px 18px rgba(0, 0, 0, 0.2);
     text-align: left;
 }
 
@@ -27,12 +155,12 @@
 
 .send_comment {
     background: #f5f5f5;
-    width: 96%;
+    width: 90%;
     border-radius: 5px;
     padding: 10px 15px;
-    box-shadow: 3px 4px 3px #888888;
+    box-shadow: -2px 10px 18px rgba(0, 0, 0, 0.2);
     text-align: left;
-    margin-top: 50px;
+    margin: 50px auto 10px ;
 }
 
 .send_comment input {
@@ -73,7 +201,8 @@
 
 
 .blog_comments {
-    width: 100%;
+    width: 90%;
+    margin: 0 auto;
 }
 
 .blog_comments_msg {
@@ -89,9 +218,10 @@
     background: #d9edf7;
     border: 1px dashed #7ca4c1;
     padding: 10px 10px 20px 10px;
-    margin-top: 10px;
+    margin-top: 30px;
     color: #31708f;
     text-align: left;
+    box-shadow: -2px 10px 18px rgba(0, 0, 0, 0.2);
 }
 
 .blog_comment span {
