--- a/page/css/guestbool.css
+++ b/page/css/guestbool.css
@@ -3,7 +3,7 @@
     width: 96%;
     border-radius: 5px;
     padding: 30px 15px 30px 15px;
-    box-shadow: 3px 4px 3px #888;
+    box-shadow: -2px 10px 18px rgba(0, 0, 0, 0.2);
 }
 .description p{
     text-align: left;
