--- a/page/css/my.css
+++ b/page/css/my.css
@@ -12,6 +12,7 @@ html, body, .wrapper{
     height: 100%;
 }
 .wrapper {
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -23,6 +24,13 @@ html, body, .wrapper{
     align-items: center;
     width: 80%;
     height: 80%;
+}
+.back{
+    position: fixed;
+    top: 20px;
+    left: 100px;
+    color: #fff;
+    font-size: 16px;
 }
 .content{
     width: 100%;
