添加关于我更改底部养样式

--- a/page/css/base.css
+++ b/page/css/base.css
@@ -179,7 +179,7 @@ body{
 }
 .footer > ul > li{
     display: inline-block;
-    color: #000;
+    color: #fff;
     float: left;
     font-size: 14px;
     margin-left: 10px;
