--- a/page/css/about.css
+++ b/page/css/about.css
@@ -1,4 +1,118 @@
+*{
+    margin: 0px;
+    padding: 0px;
+    list-style:none;
+}
+body{
+    position: relative;
+    text-align: center;
+    /*background: #5e5e5e;*/
+    /*opacity: 1;*/
+    /*background:url("../img/cloud.png")*/
+}
+a{
+    text-decoration: none;
+    color: #fff;
+}
+.top{
+    position: fixed;
+    bottom: 20px;
+    right: 10px;
+}
+.top .img{
+    width: 70px !important;
+    height: 70px !important;
+}
+.more_list{
+    position: fixed;
+    top: 250px;
+    left: 10px;
+}
+.more_list .an_list1{
+    background: rgb(244, 157, 45);
+    padding: 10px;
+    padding: 1rem;
+    -webkit-border-radius: 0.5rem;
+    -moz-border-radius: 0.5rem;
+    border-radius: 0.5rem;
+    margin-bottom: 10px;
+    margin-bottom: 1rem;
+}
+.header{
+    position: fixed;
+    z-index: 999;
+    top:0;
+    width: 100%;
+    height: 30px;
+    height: 3rem;
+    background: #d9f8e9;
+    opacity: 0.9;
+}
+.container{
+    position: relative;
+    width: 1170px;
+    height: 48px;
+    margin: 0px auto;
+    overflow: hidden;
+}
+.title{
+    display:inline-block;
+    float: left;
+    /*color: #999;*/
+    /*line-height: 50px;*/
+    /*text-decoration: none;*/
+    /*margin: 0px 15px;*/
+    /*font-size: 18px;*/
+}
+.menu{
+    float: left;
+}
+.menu > li {
+    display: inline-block;;
+    float: left;
+    height: 50px;
+    margin-left: 20px;
+    font-size: 14px;
+    line-height: 50px;
+    color: #000;
+}
+.menu > li > a {
+    text-decoration: none;
+    color: #000;
+}
+.menu > li > a:hover {
+    color: #f40;
+    border-bottom: 1px solid #f40;
+}
+
+.footer{
+    width: 100%;
+    height: 60px;
+    background: #191818;
+    text-align: center;
+    padding: 20px;
+}
+.footer > ul{
+    display: inline-block;
+    margin: 0px auto;
+    text-align: center;
+}
+.footer > ul > li{
+    display: inline-block;
+    color: #000;
+    float: left;
+    font-size: 14px;
+    margin-left: 10px;
+    cursor: pointer;
+    text-align: center;
+}
+.footer > p{
+    margin-top: 10px;
+    color: #a2a2a2;
+}
+
 .description {
+    margin-top: 20px;
     background: white;
     width: 96%;
     border-radius: 5px;
